--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+
+:root{
+    --primary-color: #22d3ee;
+    --dark-grey: #f1f5f9;
+}
 body {
     font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    background-color: var(--dark-grey);
+    margin-top: 10rem;
 } 
 
 #btn {
@@ -16,7 +24,7 @@ body {
 #setup {
     border: 1px solid black;
     height: 10vh;
-    width: 50%;
+    width: 30%;
     padding:1rem;
     margin:auto;
     margin-top: 1rem;
@@ -28,7 +36,7 @@ body {
 #punchline {
     border: 1px solid black;
     height: 10vh;
-    width: 50%;
+    width: 30%;
     padding:1rem;
     margin:auto;
     margin-top: 1rem;
@@ -37,4 +45,16 @@ body {
     background-color: white;
     text-align: center;
 }
-
+h1 {
+    color:var(--primary-color);
+}
+span {
+    color: var(--primary-color);
+}
+.muskaan {
+    color: white;
+    background-color: var(--primary-color);
+    border-radius: 10rem;
+    padding:0.4rem 0.2rem;
+    padding-bottom: 0.2rem;
+}
