--- a/style.css
+++ b/style.css
@@ -19,10 +19,13 @@ body {
     margin-top: 1rem;
     margin-bottom: 1rem;
     border-radius: 1rem;
+    border: 1px solid transparent;
+    background-color: var(--primary-color);
+    color: white;
 }
 
 #setup {
-    border: 1px solid black;
+    border: 1px solid var(--primary-color);
     height: 10vh;
     width: 30%;
     padding:1rem;
@@ -34,7 +37,7 @@ body {
     text-align: center;
 }
 #punchline {
-    border: 1px solid black;
+    border: 1px solid var(--primary-color);
     height: 10vh;
     width: 30%;
     padding:1rem;
